--- a/projects/art_pi2_bootloader/.config
+++ b/projects/art_pi2_bootloader/.config
@@ -15,12 +15,10 @@ CONFIG_RT_THREAD_PRIORITY_32=y
 # CONFIG_RT_THREAD_PRIORITY_256 is not set
 CONFIG_RT_THREAD_PRIORITY_MAX=32
 CONFIG_RT_TICK_PER_SECOND=1000
-CONFIG_RT_USING_OVERFLOW_CHECK=y
-CONFIG_RT_USING_HOOK=y
-CONFIG_RT_HOOK_USING_FUNC_PTR=y
+# CONFIG_RT_USING_OVERFLOW_CHECK is not set
+# CONFIG_RT_USING_HOOK is not set
 # CONFIG_RT_USING_HOOKLIST is not set
-CONFIG_RT_USING_IDLE_HOOK=y
-CONFIG_RT_IDLE_HOOK_LIST_SIZE=4
+# CONFIG_RT_USING_IDLE_HOOK is not set
 CONFIG_IDLE_THREAD_STACK_SIZE=256
 # CONFIG_RT_USING_TIMER_SOFT is not set
 
@@ -34,10 +32,7 @@ CONFIG_RT_KSERVICE_USING_STDLIB=y
 # CONFIG_RT_KPRINTF_USING_LONGLONG is not set
 # end of kservice optimization
 
-CONFIG_RT_USING_DEBUG=y
-CONFIG_RT_DEBUGING_COLOR=y
-CONFIG_RT_DEBUGING_CONTEXT=y
-# CONFIG_RT_DEBUGING_AUTO_INIT is not set
+# CONFIG_RT_USING_DEBUG is not set
 
 #
 # Inter-Thread communication
@@ -53,7 +48,7 @@ CONFIG_RT_USING_MUTEX=y
 #
 # Memory Management
 #
-CONFIG_RT_USING_MEMPOOL=y
+# CONFIG_RT_USING_MEMPOOL is not set
 # CONFIG_RT_USING_SMALL_MEM is not set
 # CONFIG_RT_USING_SLAB is not set
 CONFIG_RT_USING_MEMHEAP=y
@@ -127,9 +122,10 @@ CONFIG_RT_USING_DEVICE_IPC=y
 CONFIG_RT_UNAMED_PIPE_NUMBER=64
 # CONFIG_RT_USING_SYSTEM_WORKQUEUE is not set
 CONFIG_RT_USING_SERIAL=y
-# CONFIG_RT_USING_SERIAL_V1 is not set
-CONFIG_RT_USING_SERIAL_V2=y
+CONFIG_RT_USING_SERIAL_V1=y
+# CONFIG_RT_USING_SERIAL_V2 is not set
 # CONFIG_RT_SERIAL_USING_DMA is not set
+CONFIG_RT_SERIAL_RB_BUFSZ=64
 # CONFIG_RT_USING_CAN is not set
 # CONFIG_RT_USING_CPUTIME is not set
 # CONFIG_RT_USING_I2C is not set
@@ -145,13 +141,7 @@ CONFIG_RT_USING_SERIAL_V2=y
 # CONFIG_RT_USING_PM is not set
 # CONFIG_RT_USING_RTC is not set
 # CONFIG_RT_USING_SDIO is not set
-CONFIG_RT_USING_SPI=y
-# CONFIG_RT_USING_SPI_BITOPS is not set
-# CONFIG_RT_USING_QSPI is not set
-# CONFIG_RT_USING_SPI_MSD is not set
-# CONFIG_RT_USING_SFUD is not set
-# CONFIG_RT_USING_ENC28J60 is not set
-# CONFIG_RT_USING_SPI_WIFI is not set
+# CONFIG_RT_USING_SPI is not set
 # CONFIG_RT_USING_WDT is not set
 # CONFIG_RT_USING_AUDIO is not set
 # CONFIG_RT_USING_SENSOR is not set
@@ -383,6 +373,7 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 # CONFIG_PKG_USING_LHC_MODBUS is not set
 # CONFIG_PKG_USING_QMODBUS is not set
 # CONFIG_PKG_USING_PNET is not set
+# CONFIG_PKG_USING_OPENER is not set
 # end of IoT - internet of things
 
 #
@@ -518,6 +509,7 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 # CONFIG_PKG_USING_RT_TRACE is not set
 # CONFIG_PKG_USING_ZDEBUG is not set
 # CONFIG_PKG_USING_RVBACKTRACE is not set
+# CONFIG_PKG_USING_HPATCHLITE is not set
 # end of tools packages
 
 #
@@ -547,7 +539,6 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 #
 # CONFIG_PKG_USING_CMSIS_5 is not set
 # CONFIG_PKG_USING_CMSIS_CORE is not set
-# CONFIG_PKG_USING_CMSIS_DSP is not set
 # CONFIG_PKG_USING_CMSIS_NN is not set
 # CONFIG_PKG_USING_CMSIS_RTOS1 is not set
 # CONFIG_PKG_USING_CMSIS_RTOS2 is not set
@@ -664,6 +655,7 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 # CONFIG_PKG_USING_NRF5X_SDK is not set
 # CONFIG_PKG_USING_NRFX is not set
 # CONFIG_PKG_USING_RASPBERRYPI_PICO_SDK is not set
+# CONFIG_PKG_USING_MM32 is not set
 # end of HAL & SDK Drivers
 
 #
@@ -707,6 +699,7 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 # CONFIG_PKG_USING_PMSXX is not set
 # CONFIG_PKG_USING_RT3020 is not set
 # CONFIG_PKG_USING_MLX90632 is not set
+# CONFIG_PKG_USING_MLX90382 is not set
 # CONFIG_PKG_USING_MLX90393 is not set
 # CONFIG_PKG_USING_MLX90392 is not set
 # CONFIG_PKG_USING_MLX90394 is not set
@@ -842,6 +835,7 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 # CONFIG_PKG_USING_QUEST is not set
 # CONFIG_PKG_USING_NAXOS is not set
 # CONFIG_PKG_USING_R_TINYMAIX is not set
+# CONFIG_PKG_USING_LLMCHAT is not set
 # end of AI packages
 
 #
@@ -853,6 +847,7 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 # CONFIG_PKG_USING_UKAL is not set
 # CONFIG_PKG_USING_DIGITALCTRL is not set
 # CONFIG_PKG_USING_KISSFFT is not set
+# CONFIG_PKG_USING_CMSIS_DSP is not set
 # end of Signal Processing and Control Algorithm Packages
 
 #
@@ -913,6 +908,7 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 # CONFIG_PKG_USING_KI is not set
 # CONFIG_PKG_USING_ARMv7M_DWT is not set
 # CONFIG_PKG_USING_CRCLIB is not set
+# CONFIG_PKG_USING_LIBCRC is not set
 # CONFIG_PKG_USING_LWGPS is not set
 # CONFIG_PKG_USING_STATE_MACHINE is not set
 # CONFIG_PKG_USING_DESIGN_PATTERN is not set
@@ -1167,6 +1163,7 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 #
 CONFIG_SOC_STM32H7RS=y
 CONFIG_SOC_SERIES_STM32H7RS=y
+# CONFIG_RT_USING_INDEPENDENT_INTERRUPT_MANAGEMENT is not set
 
 #
 # Onboard Peripheral Drivers
@@ -1174,8 +1171,6 @@ CONFIG_SOC_SERIES_STM32H7RS=y
 CONFIG_BSP_USING_USB_TO_USART=y
 # CONFIG_BSP_USING_XSPI_NORFLASH is not set
 # CONFIG_BSP_USING_WIFI is not set
-# CONFIG_BSP_USING_OV2640 is not set
-# CONFIG_BSP_USING_GC0328C is not set
 # CONFIG_BSP_USING_LVGL is not set
 # CONFIG_BSP_USING_LVGL_DEMO is not set
 # CONFIG_BSP_USING_FS is not set
@@ -1214,13 +1209,10 @@ CONFIG_BSP_USING_PSRAM=y
 # External Libraries
 #
 # CONFIG_ART_PI_USING_WIFI_6212_LIB is not set
-# CONFIG_ART_PI_USING_OTA_LIB is not set
 # CONFIG_ART_PI_TouchGFX_LIB is not set
-# CONFIG_ART_PI_USING_FTP_LIB is not set
 # end of External Libraries
 
 CONFIG_FIRMWARE_EXEC_USING_OSPI_FLASH=y
-# CONFIG_FIRMWARE_EXEC_USING_QEMU is not set
 CONFIG_RT_STUDIO_BUILT_IN=y
 
 #
