--- a/projects/art_pi2_lvgl_demo/.config
+++ b/projects/art_pi2_lvgl_demo/.config
@@ -1245,6 +1245,8 @@ CONFIG_SOC_SERIES_STM32H7RS=y
 #
 # Onboard Peripheral Drivers
 #
+CONFIG_BSP_SCB_ENABLE_I_CACHE=y
+CONFIG_BSP_SCB_ENABLE_D_CACHE=y
 CONFIG_BSP_USING_USB_TO_USART=y
 # CONFIG_BSP_USING_XSPI_NORFLASH is not set
 # CONFIG_BSP_USING_WIFI is not set
