--- a/projects/art_pi2_bootloader/.config
+++ b/projects/art_pi2_bootloader/.config
@@ -1194,7 +1194,7 @@ CONFIG_BSP_UART4_TX_BUFSIZE=0
 # CONFIG_BSP_USING_SPI is not set
 # CONFIG_BSP_USING_I2C is not set
 # CONFIG_BSP_USING_SDIO is not set
-CONFIG_BSP_USING_PSRAM=y
+# CONFIG_BSP_USING_PSRAM is not set
 # CONFIG_BSP_USING_ETH is not set
 # CONFIG_BSP_USING_LCD is not set
 # CONFIG_BSP_USING_DCMI is not set
