修改ltdc句柄，删除music-online包

--- a/projects/art_pi2_lvgl_demo/.config
+++ b/projects/art_pi2_lvgl_demo/.config
@@ -497,9 +497,7 @@ CONFIG_PKG_LVGL_DISP_REFR_PERIOD=20
 CONFIG_PKG_LVGL_USING_LATEST=y
 CONFIG_PKG_LVGL_VER_NUM=0x999999
 CONFIG_PKG_LVGL_VER="latest"
-CONFIG_PKG_USING_LV_MUSIC_DEMO=y
-CONFIG_PKG_LV_MUSIC_DEMO_PATH="/packages/multimedia/LVGL/lv_music_demo"
-CONFIG_PKG_LV_MUSIC_DEMO_VER="latest"
+# CONFIG_PKG_USING_LV_MUSIC_DEMO is not set
 # CONFIG_PKG_USING_GUI_GUIDER_DEMO is not set
 # end of LVGL: powerful and easy-to-use embedded GUI library
 
