--- a/projects/art_pi2_bootloader/.settings/projcfg.ini
+++ b/projects/art_pi2_bootloader/.settings/projcfg.ini
@@ -1,5 +1,5 @@
 #RT-Thread Studio Project Configuration
-#Mon Jun 13 15:41:28 CST 2022
+#Thu Feb 20 17:15:33 CST 2025
 cfg_version=v3.0
 board_name=STM32H7R7-RT-ART-PI2
 example_name=art_pi2_bootloader
@@ -10,7 +10,7 @@ chip_name=STM32H7R7L8HxH
 selected_rtt_version=5.1.0
 bsp_version=1.0.0
 os_branch=full
-output_project_path=E\:\\software\\Git\\GitRepository\\ART-PI2\\sdk-bsp-stm32h7r-realthread-artpi2\\projects\\art_pi_bootloader
+output_project_path=D\:\\workspace_work\\art-pi2\\sdk-bsp-stm32h7r-realthread-artpi2\\projects
 is_base_example_project=True
 is_use_scons_build=True
 project_base_bsp=true
