--- a/RealThread_STM32H7R7-RT-ART-PI2.yaml
+++ b/RealThread_STM32H7R7-RT-ART-PI2.yaml
@@ -88,6 +88,13 @@ template_projects:
     files_and_folders:
     - ART-Pi_W25Q64.stldr
   external_files:
+  - package_name: GNU_Tools_for_ARM_Embedded_Processors
+    package_type: ToolChain_Support_Packages
+    package_vendor: 'ARM'
+    package_version: 10.2.1
+    source_path_offset: '.'
+    target_path_offset: '.'
+    files_and_folders: []
   - package_type: Chip_Support_Packages
     package_vendor: RealThread
     package_name: STM32H7
