--- a/projects/art_pi2_lvgl_demo/.config
+++ b/projects/art_pi2_lvgl_demo/.config
@@ -129,7 +129,32 @@ CONFIG_RT_USING_DFS_V1=y
 # CONFIG_RT_USING_DFS_V2 is not set
 CONFIG_DFS_FILESYSTEMS_MAX=4
 CONFIG_DFS_FILESYSTEM_TYPES_MAX=4
-# CONFIG_RT_USING_DFS_ELMFAT is not set
+CONFIG_RT_USING_DFS_ELMFAT=y
+
+#
+# elm-chan's FatFs, Generic FAT Filesystem Module
+#
+CONFIG_RT_DFS_ELM_CODE_PAGE=437
+CONFIG_RT_DFS_ELM_WORD_ACCESS=y
+# CONFIG_RT_DFS_ELM_USE_LFN_0 is not set
+# CONFIG_RT_DFS_ELM_USE_LFN_1 is not set
+# CONFIG_RT_DFS_ELM_USE_LFN_2 is not set
+CONFIG_RT_DFS_ELM_USE_LFN_3=y
+CONFIG_RT_DFS_ELM_USE_LFN=3
+CONFIG_RT_DFS_ELM_LFN_UNICODE_0=y
+# CONFIG_RT_DFS_ELM_LFN_UNICODE_1 is not set
+# CONFIG_RT_DFS_ELM_LFN_UNICODE_2 is not set
+# CONFIG_RT_DFS_ELM_LFN_UNICODE_3 is not set
+CONFIG_RT_DFS_ELM_LFN_UNICODE=0
+CONFIG_RT_DFS_ELM_MAX_LFN=255
+CONFIG_RT_DFS_ELM_DRIVES=2
+CONFIG_RT_DFS_ELM_MAX_SECTOR_SIZE=512
+# CONFIG_RT_DFS_ELM_USE_ERASE is not set
+CONFIG_RT_DFS_ELM_REENTRANT=y
+CONFIG_RT_DFS_ELM_MUTEX_TIMEOUT=3000
+# CONFIG_RT_DFS_ELM_USE_EXFAT is not set
+# end of elm-chan's FatFs, Generic FAT Filesystem Module
+
 CONFIG_RT_USING_DFS_DEVFS=y
 CONFIG_RT_USING_DFS_ROMFS=y
 # CONFIG_RT_USING_DFS_ROMFS_USER_ROOT is not set
@@ -171,7 +196,13 @@ CONFIG_RT_USING_MTD_NOR=y
 # CONFIG_RT_USING_MTD_NAND is not set
 # CONFIG_RT_USING_PM is not set
 # CONFIG_RT_USING_RTC is not set
-# CONFIG_RT_USING_SDIO is not set
+CONFIG_RT_USING_SDIO=y
+CONFIG_RT_SDIO_STACK_SIZE=512
+CONFIG_RT_SDIO_THREAD_PRIORITY=15
+CONFIG_RT_MMCSD_STACK_SIZE=1024
+CONFIG_RT_MMCSD_THREAD_PREORITY=22
+CONFIG_RT_MMCSD_MAX_PARTITION=16
+# CONFIG_RT_SDIO_DEBUG is not set
 CONFIG_RT_USING_SPI=y
 # CONFIG_RT_USING_SPI_BITOPS is not set
 # CONFIG_RT_USING_QSPI is not set
@@ -230,7 +261,17 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 #
 # POSIX (Portable Operating System Interface) layer
 #
-# CONFIG_RT_USING_POSIX_FS is not set
+CONFIG_RT_USING_POSIX_FS=y
+# CONFIG_RT_USING_POSIX_DEVIO is not set
+# CONFIG_RT_USING_POSIX_STDIO is not set
+# CONFIG_RT_USING_POSIX_POLL is not set
+# CONFIG_RT_USING_POSIX_SELECT is not set
+# CONFIG_RT_USING_POSIX_EVENTFD is not set
+# CONFIG_RT_USING_POSIX_TIMERFD is not set
+# CONFIG_RT_USING_POSIX_SOCKET is not set
+# CONFIG_RT_USING_POSIX_TERMIOS is not set
+# CONFIG_RT_USING_POSIX_AIO is not set
+# CONFIG_RT_USING_POSIX_MMAN is not set
 # CONFIG_RT_USING_POSIX_DELAY is not set
 # CONFIG_RT_USING_POSIX_CLOCK is not set
 # CONFIG_RT_USING_POSIX_TIMER is not set
@@ -415,8 +456,6 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 # CONFIG_PKG_USING_MATTER_ADAPTATION_LAYER is not set
 # CONFIG_PKG_USING_LHC_MODBUS is not set
 # CONFIG_PKG_USING_QMODBUS is not set
-# CONFIG_PKG_USING_PNET is not set
-# CONFIG_PKG_USING_OPENER is not set
 # end of IoT - internet of things
 
 #
@@ -444,7 +483,6 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 # CONFIG_PKG_USING_JSMN is not set
 # CONFIG_PKG_USING_AGILE_JSMN is not set
 # CONFIG_PKG_USING_PARSON is not set
-# CONFIG_PKG_USING_RYAN_JSON is not set
 # end of JSON: JavaScript Object Notation, a lightweight data-interchange format
 
 #
@@ -474,10 +512,10 @@ CONFIG_PKG_LVGL_PATH="/packages/multimedia/LVGL/LVGL"
 CONFIG_PKG_LVGL_THREAD_PRIO=20
 CONFIG_PKG_LVGL_THREAD_STACK_SIZE=4096
 CONFIG_PKG_LVGL_DISP_REFR_PERIOD=20
-# CONFIG_PKG_USING_LVGL_SQUARELINE is not set
+# CONFIG_PKG_LVGL_USING_SQUARELINE is not set
 # CONFIG_PKG_LVGL_USING_EXAMPLES is not set
 # CONFIG_PKG_LVGL_USING_DEMOS is not set
-# CONFIG_PKG_LVGL_USING_V080311 is not set
+CONFIG_PKG_LVGL_USING_V080311=y
 # CONFIG_PKG_LVGL_USING_V080310 is not set
 # CONFIG_PKG_LVGL_USING_V08039 is not set
 # CONFIG_PKG_LVGL_USING_V08038 is not set
@@ -490,16 +528,15 @@ CONFIG_PKG_LVGL_DISP_REFR_PERIOD=20
 # CONFIG_PKG_LVGL_USING_V08031 is not set
 # CONFIG_PKG_LVGL_USING_V08030 is not set
 # CONFIG_PKG_LVGL_USING_V08020 is not set
-# CONFIG_PKG_LVGL_USING_V8_3_LATEST is not set
-# CONFIG_PKG_LVGL_USING_V8_4_LATEST is not set
+# CONFIG_PKG_LVGL_USING_V8_3_LATEST_VERSION is not set
 # CONFIG_PKG_LVGL_USING_V09000 is not set
 # CONFIG_PKG_LVGL_USING_V09010 is not set
-CONFIG_PKG_LVGL_USING_LATEST=y
-CONFIG_PKG_LVGL_VER_NUM=0x999999
-CONFIG_PKG_LVGL_VER="latest"
+# CONFIG_PKG_LVGL_USING_LATEST_VERSION is not set
+CONFIG_PKG_LVGL_VER_NUM=0x080311
+CONFIG_PKG_LVGL_VER="v8.3.11"
 CONFIG_PKG_USING_LV_MUSIC_DEMO=y
 CONFIG_PKG_LV_MUSIC_DEMO_PATH="/packages/multimedia/LVGL/lv_music_demo"
-CONFIG_PKG_LV_MUSIC_DEMO_VER="latest"
+CONFIG_PKG_LV_MUSIC_DEMO_VER="v0.3.4"
 # CONFIG_PKG_USING_GUI_GUIDER_DEMO is not set
 # end of LVGL: powerful and easy-to-use embedded GUI library
 
@@ -580,8 +617,6 @@ CONFIG_PKG_LV_MUSIC_DEMO_VER="latest"
 # CONFIG_PKG_USING_VOFA_PLUS is not set
 # CONFIG_PKG_USING_RT_TRACE is not set
 # CONFIG_PKG_USING_ZDEBUG is not set
-# CONFIG_PKG_USING_RVBACKTRACE is not set
-# CONFIG_PKG_USING_HPATCHLITE is not set
 # end of tools packages
 
 #
@@ -611,6 +646,7 @@ CONFIG_PKG_LV_MUSIC_DEMO_VER="latest"
 #
 # CONFIG_PKG_USING_CMSIS_5 is not set
 # CONFIG_PKG_USING_CMSIS_CORE is not set
+# CONFIG_PKG_USING_CMSIS_DSP is not set
 # CONFIG_PKG_USING_CMSIS_NN is not set
 # CONFIG_PKG_USING_CMSIS_RTOS1 is not set
 # CONFIG_PKG_USING_CMSIS_RTOS2 is not set
@@ -670,13 +706,10 @@ CONFIG_PKG_LV_MUSIC_DEMO_VER="latest"
 # CONFIG_PKG_USING_FLASH_BLOB is not set
 # CONFIG_PKG_USING_MLIBC is not set
 # CONFIG_PKG_USING_TASK_MSG_BUS is not set
-# CONFIG_PKG_USING_UART_FRAMEWORK is not set
 # CONFIG_PKG_USING_SFDB is not set
 # CONFIG_PKG_USING_RTP is not set
 # CONFIG_PKG_USING_REB is not set
-# CONFIG_PKG_USING_RMP is not set
 # CONFIG_PKG_USING_R_RHEALSTONE is not set
-# CONFIG_PKG_USING_HEARTBEAT is not set
 # end of system packages
 
 #
@@ -690,8 +723,6 @@ CONFIG_PKG_LV_MUSIC_DEMO_VER="latest"
 #
 # STM32 HAL & SDK Drivers
 #
-# CONFIG_PKG_USING_STM32F4_HAL_DRIVER is not set
-# CONFIG_PKG_USING_STM32F4_CMSIS_DRIVER is not set
 # CONFIG_PKG_USING_STM32L4_HAL_DRIVER is not set
 # CONFIG_PKG_USING_STM32L4_CMSIS_DRIVER is not set
 # CONFIG_PKG_USING_STM32WB55_SDK is not set
@@ -727,7 +758,6 @@ CONFIG_PKG_LV_MUSIC_DEMO_VER="latest"
 # CONFIG_PKG_USING_NRF5X_SDK is not set
 # CONFIG_PKG_USING_NRFX is not set
 # CONFIG_PKG_USING_RASPBERRYPI_PICO_SDK is not set
-# CONFIG_PKG_USING_MM32 is not set
 # end of HAL & SDK Drivers
 
 #
@@ -771,10 +801,8 @@ CONFIG_PKG_LV_MUSIC_DEMO_VER="latest"
 # CONFIG_PKG_USING_PMSXX is not set
 # CONFIG_PKG_USING_RT3020 is not set
 # CONFIG_PKG_USING_MLX90632 is not set
-# CONFIG_PKG_USING_MLX90382 is not set
 # CONFIG_PKG_USING_MLX90393 is not set
 # CONFIG_PKG_USING_MLX90392 is not set
-# CONFIG_PKG_USING_MLX90394 is not set
 # CONFIG_PKG_USING_MLX90397 is not set
 # CONFIG_PKG_USING_MS5611 is not set
 # CONFIG_PKG_USING_MAX31865 is not set
@@ -893,9 +921,6 @@ CONFIG_PKG_GT9147_VER="v1.1.0"
 # CONFIG_PKG_USING_SYSTEM_RUN_LED is not set
 # CONFIG_PKG_USING_BT_MX01 is not set
 # CONFIG_PKG_USING_RGPOWER is not set
-# CONFIG_PKG_USING_BT_MX02 is not set
-# CONFIG_PKG_USING_GC9A01 is not set
-# CONFIG_PKG_USING_IK485 is not set
 # CONFIG_PKG_USING_SPI_TOOLS is not set
 # end of peripheral libraries and drivers
 
@@ -912,7 +937,6 @@ CONFIG_PKG_GT9147_VER="v1.1.0"
 # CONFIG_PKG_USING_QUEST is not set
 # CONFIG_PKG_USING_NAXOS is not set
 # CONFIG_PKG_USING_R_TINYMAIX is not set
-# CONFIG_PKG_USING_LLMCHAT is not set
 # end of AI packages
 
 #
@@ -924,7 +948,6 @@ CONFIG_PKG_GT9147_VER="v1.1.0"
 # CONFIG_PKG_USING_UKAL is not set
 # CONFIG_PKG_USING_DIGITALCTRL is not set
 # CONFIG_PKG_USING_KISSFFT is not set
-# CONFIG_PKG_USING_CMSIS_DSP is not set
 # end of Signal Processing and Control Algorithm Packages
 
 #
@@ -985,7 +1008,6 @@ CONFIG_PKG_GT9147_VER="v1.1.0"
 # CONFIG_PKG_USING_KI is not set
 # CONFIG_PKG_USING_ARMv7M_DWT is not set
 # CONFIG_PKG_USING_CRCLIB is not set
-# CONFIG_PKG_USING_LIBCRC is not set
 # CONFIG_PKG_USING_LWGPS is not set
 # CONFIG_PKG_USING_STATE_MACHINE is not set
 # CONFIG_PKG_USING_DESIGN_PATTERN is not set
@@ -1009,7 +1031,6 @@ CONFIG_PKG_GT9147_VER="v1.1.0"
 # CONFIG_PKG_USING_ARDUINO_MSGQ_C_CPP_DEMO is not set
 # CONFIG_PKG_USING_ARDUINO_SKETCH_LOADER_DEMO is not set
 # CONFIG_PKG_USING_ARDUINO_ULTRASOUND_RADAR is not set
-# CONFIG_PKG_USING_ARDUINO_RTDUINO_SENSORFUSION_SHIELD is not set
 # CONFIG_PKG_USING_ARDUINO_NINEINONE_SENSOR_SHIELD is not set
 # CONFIG_PKG_USING_ARDUINO_SENSOR_KIT is not set
 # CONFIG_PKG_USING_ARDUINO_MATLAB_SUPPORT is not set
@@ -1261,7 +1282,9 @@ CONFIG_BSP_USING_LVGL_MUSIC_DEMO=y
 # CONFIG_BSP_USING_LVGL_WIDGETS_DEMO is not set
 # CONFIG_BSP_USING_LVGL_STRESS_DEMO is not set
 # CONFIG_BSP_USING_LVGL_RENDER_DEMO is not set
-# CONFIG_BSP_USING_FS is not set
+CONFIG_BSP_USING_FS=y
+CONFIG_BSP_USING_SDCARD_FS=y
+# CONFIG_BSP_USING_SPI_FLASH_FS is not set
 # end of Onboard Peripheral Drivers
 
 #
@@ -1300,7 +1323,9 @@ CONFIG_BSP_USING_I2C3=y
 #
 CONFIG_BSP_I2C3_SCL_PIN=7
 CONFIG_BSP_I2C3_SDA_PIN=4
-# CONFIG_BSP_USING_SDIO is not set
+CONFIG_BSP_USING_SDIO=y
+CONFIG_BSP_USING_SDIO1=y
+# CONFIG_BSP_USING_SDIO2 is not set
 CONFIG_BSP_USING_PSRAM=y
 # CONFIG_BSP_USING_ETH is not set
 CONFIG_BSP_USING_LCD=y
