--- a/projects/art_pi2_blink_led/.project
+++ b/projects/art_pi2_blink_led/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>ART-Pi-blink-led</name>
+  <name>art_pi2_blink_led</name>
   <comment />
   <projects>
 	</projects>
