--- a/projects/art_pi2_bootloader/.project
+++ b/projects/art_pi2_bootloader/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>art-pi-bootloader</name>
+  <name>art_pi2_bootloader</name>
   <comment />
   <projects>
 	</projects>
