--- a/projects/art_pi2_lvgl_demo/.project
+++ b/projects/art_pi2_lvgl_demo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>project</name>
+  <name>art_pi2_lvgl_demo</name>
   <comment />
   <projects>
 	</projects>
