--- a/projects/art_pi2_touchgfx/.settings/projcfg.ini
+++ b/projects/art_pi2_touchgfx/.settings/projcfg.ini
@@ -1,5 +1,5 @@
 #RT-Thread Studio Project Configuration
-#Mon Jun 13 15:35:21 CST 2022
+#Sat Feb 22 16:05:52 CST 2025
 cfg_version=v3.0
 board_name=STM32H7R7-RT-ART-PI2
 example_name=art_pi2_blink_led
@@ -7,13 +7,13 @@ hardware_adapter=ST-LINK
 board_base_nano_proj=False
 project_type=rt-thread
 chip_name=STM32H7R7L8HxH
-selected_rtt_version=5.1.0
 bsp_version=1.0.0
+selected_rtt_version=5.1.0
 os_branch=full
-output_project_path=E\:\\software\\Git\\GitRepository\\ART-PI2\\sdk-bsp-stm32h7r-realthread-artpi2\\projects\\art_pi2_blink_led
-is_base_example_project=True
-is_use_scons_build=True
 project_base_bsp=true
+is_use_scons_build=True
+is_base_example_project=True
+output_project_path=D\:\\workspace\\work\\sdk-bsp-stm32h7r-realthread-artpi2\\projects
 project_name=art_pi2_blink_led
-os_version=5.1.0
 bsp_path=repo/Local/Board_Support_Packages/RealThread/STM32H7R7-RT-ART-PI2/1.0.0/sdk-bsp-stm32h7r-realthread-artpi2-master
+os_version=5.1.0
