--- a/projects/art_pi2_lvgl_demo/.config
+++ b/projects/art_pi2_lvgl_demo/.config
@@ -533,7 +533,27 @@ CONFIG_PKG_LVGL_VER="latest"
 #
 # tools packages
 #
-# CONFIG_PKG_USING_CMBACKTRACE is not set
+CONFIG_PKG_USING_CMBACKTRACE=y
+# CONFIG_PKG_CMBACKTRACE_PLATFORM_M0_M0PLUS is not set
+# CONFIG_PKG_CMBACKTRACE_PLATFORM_M3 is not set
+# CONFIG_PKG_CMBACKTRACE_PLATFORM_M4 is not set
+CONFIG_PKG_CMBACKTRACE_PLATFORM_M7=y
+# CONFIG_PKG_CMBACKTRACE_PLATFORM_M33 is not set
+# CONFIG_PKG_CMBACKTRACE_PLATFORM_NOT_SELECTED is not set
+CONFIG_PKG_CMBACKTRACE_DUMP_STACK=y
+CONFIG_PKG_CMBACKTRACE_PRINT_ENGLISH=y
+# CONFIG_PKG_CMBACKTRACE_PRINT_CHINESE is not set
+# CONFIG_PKG_CMBACKTRACE_PRINT_CHINESE_UTF8 is not set
+# CONFIG_CMB_USING_FAL_FLASH_LOG is not set
+CONFIG_PKG_CMBACKTRACE_PATH="/packages/tools/CmBacktrace"
+# CONFIG_PKG_USING_CMBACKTRACE_V10401 is not set
+# CONFIG_PKG_USING_CMBACKTRACE_V10400 is not set
+# CONFIG_PKG_USING_CMBACKTRACE_V10300 is not set
+# CONFIG_PKG_USING_CMBACKTRACE_V10202 is not set
+# CONFIG_PKG_USING_CMBACKTRACE_V10200 is not set
+CONFIG_PKG_USING_CMBACKTRACE_LATEST_VERSION=y
+CONFIG_PKG_CMBACKTRACE_VER="latest"
+CONFIG_PKG_CMBACKTRACE_VER_NUM=0x99999
 # CONFIG_PKG_USING_EASYFLASH is not set
 # CONFIG_PKG_USING_EASYLOGGER is not set
 # CONFIG_PKG_USING_SYSTEMVIEW is not set
